RESOLVED FIXED268985
Unreviewed build fix - add missing `ScriptExecutionContext` header
https://bugs.webkit.org/show_bug.cgi?id=268985
Summary Unreviewed build fix - add missing `ScriptExecutionContext` header
Ahmad Saleem
Reported 2024-02-08 07:32:53 PST
After recent TrsutType landing, I am getting build failures and adding header as suggested by Anne fixed it. So doing unreviewed build fix. Thanks!
Attachments
EWS
Comment 1 2024-02-08 08:37:39 PST
Committed 274289@main (619a40a68768): <https://commits.webkit.org/274289@main> Reviewed commits have been landed. Closing PR #24070 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-02-08 08:38:15 PST
Note You need to log in before you can comment on or make changes to this bug.