Build fix - add missing `ScriptExecutionContext` header

https://bugs.webkit.org/show_bug.cgi?id=268985

Reviewed by Chris Dumez and Anne van Kesteren.

This PR adds missing header in `TrustedTypePolicyFactory.cpp` post 274263@main.

* Source/WebCore/dom/TrustedTypePolicyFactory.cpp:

Canonical link: https://commits.webkit.org/274289@main